[metadata]
name = if_dsl_gui_ai
version = 0.0.1
author = Simic Aleksa
author_email = aleksadsimic@gmail.com
description = For generating and playing IF games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SimicAleksa/pythonProject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True